# ABF_Explorer

./: .gitignore  .pylintrc  Makefile  README.md  README.org  abf_explorer.spec  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.org  setup.py  tox.ini
abf_explorer/: __init__.py  __main__.py  abf.py  abf_logging.py  abfexplore.spec  args.py  filedisplay.py  fileinfoplotcontrols.py  gui.py  plotting.py  plotutils.py
abf_explorer/abf_analysis/: lfpio.py  regionselection.py
data/abfs/: 20101001.abf  20101002.abf  20318003.abf
data/icons/: traces.xcf
tests/: conftest.py  test_abf.py  test_filedisplay.py  test_fileinfoplotcontrols.py  test_gui.py
