[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "abf_explorer"
author = "Nick George"
author-email = "nicholas.george32@gmail.com"
home-page = "https://github.com/nkicg6/ABF_Explorer"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    ]
description-file = "README.md"
requires-python = ">=3.7"
requires = ["numpy", "PyQt5", "pyqtgraph", "pyabf"]
